<resources>
    <string name="app_name">SomeFood</string>
    <string name="sign_out">Sign out</string>
    <string name="creator">Creator</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="volume">Volume</string>
    <string name="string_one_int">1</string>
    <string name="time">Time</string>
    <string name="open_orders">Open orders</string>
    <string name="do_you_want_to_cancel_the_order">Do you want to cancel the order?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_take_this_order">Do you want to take this order:</string>
    <string name="your_feedback">Your feedback</string>
    <string name="send">Send</string>
    <string name="orders_in_work">Orders in work</string>
    <string name="_5_5">5/5</string>
    <string name="client">Client</string>
    <string name="your_address">Your address</string>
    <string name="orders_made">Orders made:</string>
    <string name="_0">0</string>
    <string name="orders_ordered">Orders ordered:</string>
    <string name="personal_data">Personal data</string>
    <string name="your_id">Your id:</string>
    <string name="your_login">Your login:</string>
    <string name="about_you">About you:</string>
    <string name="description">Description</string>
    <string name="most_ordered">Most ordered</string>
    <string name="nothing">Nothing</string>
    <string name="ordered_0">Ordered:0</string>
    <string name="last_feedback">Last feedback</string>
    <string name="ibrahim">Ibrahim</string>
    <string name="excellent">Excellent</string>
    <string name="_2_5">2/5</string>
    <string name="second_password">Second password</string>
    <string name="accept">Accept</string>
    <string name="back">Back</string>
    <string name="please_wait_confirm_order">Please, wait confirm order</string>
    <string name="creator_is_not_founded_yet">Creator is not founded yet</string>
    <string name="all_orders">All orders</string>
    <string name="switch_button_for_choose_role">switch button for choose role</string>
    <string name="image_of_food">image of food</string>
    <string name="activity_for_order">activity for order</string>
    <string name="minus_volume_food">minus volume food</string>
    <string name="plus_volume_food">plus volume food</string>
    <string name="home_screen">home screen</string>
    <string name="authentification_screen">authentification screen</string>
    <string name="loading">loading</string>
    <string name="progressBar">progress bar</string>
    <string name="gif">gif image</string>
    <string name="button_add_your_photo">button add your photo</string>
    <string name="your_photo">your photo</string>
    <string name="your_status">your status</string>
    <string name="your_name">your name</string>
    <string name="your_average_mark">your average mark</string>
    <string name="save_name">button save your name</string>
    <string name="scrollview_profile">scrollview profile</string>
    <string name="button_save_your_address">button save your address</string>
    <string name="numbers_of_orders_made">numbers of orders made</string>
    <string name="numbers_ordered">numbers ordered</string>
    <string name="your_id_change">your id change</string>
    <string name="your_login_change">your login change</string>
    <string name="about_you_change">about you change</string>
    <string name="button_save_about_your">button save about your</string>
    <string name="cardview_most_ordered">cardview most ordered</string>
    <string name="most_ordered_image_food">most ordered image food</string>
    <string name="name_most_ordered_food">name most ordered food</string>
    <string name="card_view_last_feedback">card view last feedback</string>
    <string name="feedback_profile_mark">feedback profile mark</string>
    <string name="image_profile_feedback">image profile feedback</string>
    <string name="name_last_feedback">name last feedback</string>
    <string name="mark_last_feedback">mark last feedback</string>
    <string name="text_last_feedback">text last feedback</string>
    <string name="list_last_orders">list last orders</string>
    <string name="jfja">jfja</string>
    <string name="button_navigation_home">button navigation home</string>
    <string name="button_navigation_favorite">button_navigation_favorite</string>
    <string name="button_navigation_order_list">button_navigation_order list</string>
    <string name="button_navigation_profile">button_navigation_profile</string>
    <string name="model_list_foods">model list foods</string>
    <string name="card_view_accept_order">card view accept order</string>
    <string name="card_view_cancel_order">card view cancel order</string>
    <string name="button_no">button no</string>
    <string name="button_yes">button yes</string>
    <string name="name_food_of_order">name food of order</string>
    <string name="description_food">description food</string>
    <string name="list_favorite_food">list favorite food</string>
    <string name="rating_bar">rating bar</string>
    <string name="card_view_feedback">card view feedback</string>
    <string name="text_of_your_feedback">text of your feedback</string>
    <string name="button_accept">button accept</string>
    <string name="orders_list_for_client">orders list for client</string>
    <string name="orders_list_for_creator">orders list for creator</string>
    <string name="body_food_model">body food model</string>
    <string name="name_food">name food</string>
    <string name="button_add_to_favorite">button add to favorite</string>
    <string name="button_add_to_order">button add to order</string>
    <string name="status_of_your_order">status of your order</string>
    <string name="button_cancel_order">button cancel order</string>
    <string name="time_of_order">time of order</string>
    <string name="card_view_volume_food">card view volume food</string>
    <string name="volume_food_order">volume food order</string>
    <string name="card_view_last_order">card view last order</string>
    <string name="card_view_one_of_last_order">card view one of last order</string>
    <string name="button_back">button back</string>
    <string name="progressbarsmall">progressBarSmall</string>
    <string name="creatorfood">creatorfood</string>
</resources>