<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.appsomefood.FeedbackDialog.FeedbackDialogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:contentDescription="@string/card_view_feedback"
        android:importantForAccessibility="auto"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no">

            <RatingBar
                android:id="@+id/ratingBar_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/rating_bar"
                android:importantForAccessibility="auto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <EditText
                android:id="@+id/feedback"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:contentDescription="@string/text_of_your_feedback"
                android:gravity="center"
                android:hint="@string/your_feedback"
                android:importantForAccessibility="auto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_indicator"
                app:layout_constraintVertical_bias="0" />

            <Button
                android:id="@+id/sendFeedback"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:contentDescription="@string/button_accept"
                android:gravity="center"
                android:importantForAccessibility="auto"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feedback" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>