<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/identificatorCreator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="2dp">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="400dp"
        android:minHeight="200dp"
        android:backgroundTint="@color/my"
        android:elevation="8dp"
        android:importantForAccessibility="no"
        app:cardCornerRadius="20dp"
        app:cardElevation="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/wait"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/prozrachnii_krug"
            android:contentDescription="@string/please_wait_confirm_order"
            android:gravity="center"
            android:importantForAccessibility="auto"
            android:text="@string/please_wait_confirm_order"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:minWidth="160dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/name_food"
            android:gravity="top"
            android:importantForAccessibility="auto"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/descriptionFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:minWidth="160dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/description_food"
            android:ellipsize="end"
            android:importantForAccessibility="auto"
            android:maxLines="5"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/clientFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:minWidth="160dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="155dp"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:contentDescription="@string/status_of_your_order"
            android:gravity="bottom"
            android:importantForAccessibility="auto"
            android:text="@string/creator_is_not_founded_yet"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnDelOrder"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/button_cancel_order"
            android:elevation="4dp"
            android:importantForAccessibility="auto"
            app:cardCornerRadius="80dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/buttonCancelOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/krest" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/timerCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:minWidth="50dp"
            android:layout_gravity="end|center"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/time_of_order"
            android:elevation="4dp"
            android:importantForAccessibility="auto"
            app:cardCornerRadius="80dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/timerMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="10dp"
                android:importantForAccessibility="no"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timerSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:text=""
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="5dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_baseline_access_time_24" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnDoneOrder"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/button_accept"
            android:elevation="4dp"
            android:importantForAccessibility="auto"
            app:cardCornerRadius="80dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_baseline_done_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewImageFoodInOrder"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/yellow"
            android:elevation="15dp"
            android:importantForAccessibility="no"
            android:translationZ="1dp"
            app:cardCornerRadius="80dp"
            app:cardElevation="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewFood"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_of_food"
                android:importantForAccessibility="auto"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:minWidth="140dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/card_view_volume_food"
            android:elevation="15dp"
            android:importantForAccessibility="auto"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/krest"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/volumeOrderCreator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/volume_food_order"
                android:importantForAccessibility="auto"
                android:text=""
                android:textSize="20dp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>