<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/identificatorOrders"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/for_back_white"
    android:clipToPadding="false"
    android:padding="2dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:backgroundTint="@color/my"
        android:elevation="8dp"
        android:importantForAccessibility="no"
        app:cardCornerRadius="20dp"
        app:cardElevation="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="180dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/name_food"
            android:gravity="center"
            android:importantForAccessibility="auto"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:minWidth="180dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/description_food"
            android:ellipsize="end"
            android:gravity="center"
            android:importantForAccessibility="auto"
            android:maxLines="4"
            android:padding="5dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statusOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:minWidth="180dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="165dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/status_of_your_order"
            android:gravity="center"
            android:importantForAccessibility="auto"
            android:padding="5dp"
            android:text="@string/creator_is_not_founded_yet"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/creatorFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:minWidth="180dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corners"
            android:contentDescription="@string/creatorfood"
            android:gravity="center"
            android:importantForAccessibility="auto"
            android:padding="5dp"
            android:text="creator_is_not_founded_yet"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnDelOrder"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/button_cancel_order"
            android:elevation="4dp"
            android:importantForAccessibility="auto"
            app:cardCornerRadius="80dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/buttonCancelOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/krest" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/timerCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="80dp"
            android:layout_gravity="end|center"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/time_of_order"
            android:elevation="4dp"
            android:importantForAccessibility="auto"
            app:cardCornerRadius="80dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/timerMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="10dp"
                android:importantForAccessibility="no"
                android:text="10"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timerSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:text="00"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="5dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_baseline_access_time_24" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnDone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/button_accept"
            android:elevation="4dp"
            android:importantForAccessibility="auto"
            app:cardCornerRadius="80dp"
            app:cardElevation="8dp">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_baseline_done_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewImageFoodInOrder"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/image_of_food"
            android:elevation="15dp"
            android:importantForAccessibility="auto"
            android:translationZ="1dp"
            app:cardCornerRadius="80dp"
            app:cardElevation="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewFavorite"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_of_food"
                android:importantForAccessibility="auto"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/card_view_volume_food"
            android:elevation="15dp"
            android:importantForAccessibility="auto"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/krest"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/volumeOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="1dp"
                android:importantForAccessibility="no"
                android:text=""
                android:textSize="20dp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>